--- a/templates/attendance/dashboard.html
+++ b/templates/attendance/dashboard.html
@@ -70,7 +70,7 @@
                     </span>
                     <span class="text">View Leave Applications</span>
                 </a>
-                <a href="#" class="btn btn-light btn-icon-split w-100 justify-content-start">
+                <a href="{% url 'attendance_report' %}" class="btn btn-light btn-icon-split w-100 justify-content-start">
                     <span class="icon text-gray-600">
                         <i class="fas fa-chart-bar"></i>
                     </span>
