--- a/templates/students/student_list.html
+++ b/templates/students/student_list.html
@@ -34,6 +34,7 @@
                         <th>Name</th>
                         <th>Class</th>
                         <th>Section</th>
+                        <th>Roll</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
@@ -44,6 +45,7 @@
                         <td>{{ student.user.get_full_name }}</td>
                         <td>{{ student.current_class }}</td>
                         <td>{{ student.section }}</td>
+                        <td>{{ student.roll_number }}</td>
                         <td>
                             <a href="{% url 'student_detail' student.pk %}" class="btn btn-info btn-sm btn-circle">
                                 <i class="fas fa-info-circle"></i>
@@ -58,9 +60,9 @@
                     </tr>
                     {% empty %}
                     <tr>
-                        <td colspan="5" class="text-center">No students found.</td>
+                        <td colspan="6" class="text-center">No students found.</td>
                     </tr>
-                    {% endfor %}
+                    {% endfor %}   
                 </tbody>
             </table>
         </div>
